--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.9.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
